# claude-run

./: Cargo.toml  Makefile  README.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: cli_integration.rs
crates/lib/: Cargo.toml
crates/lib/src/: lib.rs  notify.rs  output.rs  pipeline.rs  slugify.rs  verdict.rs
crates/pipeline/: Cargo.toml
crates/pipeline/src/: lib.rs
crates/retry/: Cargo.toml
crates/retry/src/: lib.rs
crates/review/: Cargo.toml
crates/review/src/: lib.rs
crates/verify/: Cargo.toml
crates/verify/src/: lib.rs
docs/: architecture-pipeline.md  design-adversarial-verification.md
src/: cli.rs  config.rs  lib.rs  main.rs  notify.rs  output.rs  pipeline.rs  prompts.rs  rate_limit.rs  runner.rs  stage.rs  verifier.rs  verify.rs  yaml_pipeline.rs
tests/: cli_integration.rs
