[package]
name = "claude-run"
version = "0.1.0"
edition = "2021"
description = "Non-interactive Claude Code runner with rate-limit retry and verification loops"

[[bin]]
name = "claude-run"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
colored = "3"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
