[workspace]
resolver = "2"
members = [
    "crates/lib",
    "crates/retry",
    "crates/verify",
    "crates/review",
    "crates/pipeline",
    "crates/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
colored = "3"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
claude-run-lib = { path = "crates/lib" }
